# workshop-psj-2025

./: .gitignore  README.md  pyproject.toml
notebooks/: generalized_Procrustes_analysis.ipynb  thin_plate_spline.ipynb
