[project]
name = "workshop-psj-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.0",
    "ktch>=0.6.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "plotly<6.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
]
